--- a/public/result/fc2010/result/result4.files/stylesheet.css
+++ b/public/result/fc2010/result/result4.files/stylesheet.css
@@ -21,11 +21,11 @@ ruby
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:ü‡ÉSÉVÉbÉN, monospace;
+	font-family:Ê∏∏„Ç¥„Ç∑„ÉÉ„ÇØ, monospace;
 	mso-font-charset:128;
 	border:none;
 	mso-protection:locked visible;
-	mso-style-name:ïWèÄ;
+	mso-style-name:Ê®ôÊ∫ñ;
 	mso-style-id:0;}
 td
 	{mso-style-parent:style0;
@@ -38,7 +38,7 @@ td
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:ü‡ÉSÉVÉbÉN, monospace;
+	font-family:Ê∏∏„Ç¥„Ç∑„ÉÉ„ÇØ, monospace;
 	mso-font-charset:128;
 	mso-number-format:General;
 	text-align:general;
@@ -70,49 +70,42 @@ td
 	white-space:normal;}
 .xl69
 	{mso-style-parent:style0;
+	mso-number-format:"Short Date";
 	text-align:left;
 	vertical-align:top;
-	border-top:.5pt solid windowtext;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;
+	border:.5pt solid windowtext;
 	white-space:normal;}
 .xl70
 	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:top;
-	border-top:none;
-	border-right:.5pt solid windowtext;
-	border-bottom:none;
-	border-left:.5pt solid windowtext;
+	border:.5pt solid windowtext;
 	white-space:normal;}
 .xl71
 	{mso-style-parent:style0;
 	text-align:left;
 	vertical-align:top;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
 .xl72
 	{mso-style-parent:style0;
-	mso-number-format:"Short Date";
 	text-align:left;
 	vertical-align:top;
-	border-top:.5pt solid windowtext;
+	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
 .xl73
 	{mso-style-parent:style0;
-	mso-number-format:"Short Date";
 	text-align:left;
 	vertical-align:top;
 	border-top:none;
 	border-right:.5pt solid windowtext;
-	border-bottom:none;
+	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
 .xl74
@@ -120,28 +113,48 @@ td
 	mso-number-format:"Short Date";
 	text-align:left;
 	vertical-align:top;
-	border-top:none;
+	border-top:.5pt solid windowtext;
 	border-right:.5pt solid windowtext;
-	border-bottom:.5pt solid windowtext;
+	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
 .xl75
 	{mso-style-parent:style0;
+	mso-number-format:"Short Date";
+	text-align:left;
 	vertical-align:top;
-	border-top:.5pt solid windowtext;
+	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
 .xl76
 	{mso-style-parent:style0;
+	mso-number-format:"Short Date";
+	text-align:left;
+	vertical-align:top;
+	border-top:none;
+	border-right:.5pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
+	border-left:.5pt solid windowtext;
+	white-space:normal;}
+.xl77
+	{mso-style-parent:style0;
+	vertical-align:top;
+	border-top:.5pt solid windowtext;
+	border-right:.5pt solid windowtext;
+	border-bottom:none;
+	border-left:.5pt solid windowtext;
+	white-space:normal;}
+.xl78
+	{mso-style-parent:style0;
 	vertical-align:top;
 	border-top:none;
 	border-right:.5pt solid windowtext;
 	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
-.xl77
+.xl79
 	{mso-style-parent:style0;
 	vertical-align:top;
 	border-top:none;
@@ -149,7 +162,7 @@ td
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
-.xl78
+.xl80
 	{mso-style-parent:style0;
 	mso-number-format:"Short Date";
 	vertical-align:top;
@@ -158,7 +171,7 @@ td
 	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
-.xl79
+.xl81
 	{mso-style-parent:style0;
 	mso-number-format:"Short Date";
 	vertical-align:top;
@@ -167,7 +180,7 @@ td
 	border-bottom:none;
 	border-left:.5pt solid windowtext;
 	white-space:normal;}
-.xl80
+.xl82
 	{mso-style-parent:style0;
 	mso-number-format:"Short Date";
 	vertical-align:top;
@@ -175,17 +188,4 @@ td
 	border-right:.5pt solid windowtext;
 	border-bottom:.5pt solid windowtext;
 	border-left:.5pt solid windowtext;
-	white-space:normal;}
-.xl81
-	{mso-style-parent:style0;
-	mso-number-format:"Short Date";
-	text-align:left;
-	vertical-align:top;
-	border:.5pt solid windowtext;
-	white-space:normal;}
-.xl82
-	{mso-style-parent:style0;
-	text-align:left;
-	vertical-align:top;
-	border:.5pt solid windowtext;
 	white-space:normal;}
