- 2010/result4 Shift-JIS保存

--- a/public/result/fc2010/result/result4.files/stylesheet.css
+++ b/public/result/fc2010/result/result4.files/stylesheet.css
@@ -21,11 +21,11 @@ ruby
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:Ê∏∏„Ç¥„Ç∑„ÉÉ„ÇØ, monospace;
+	font-family:ü‡ÉSÉVÉbÉN, monospace;
 	mso-font-charset:128;
 	border:none;
 	mso-protection:locked visible;
-	mso-style-name:Ê®ôÊ∫ñ;
+	mso-style-name:ïWèÄ;
 	mso-style-id:0;}
 td
 	{mso-style-parent:style0;
@@ -38,7 +38,7 @@ td
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
-	font-family:Ê∏∏„Ç¥„Ç∑„ÉÉ„ÇØ, monospace;
+	font-family:ü‡ÉSÉVÉbÉN, monospace;
 	mso-font-charset:128;
 	mso-number-format:General;
 	text-align:general;
